--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-   "name":"ChottaChetanTalkies",
+   "name":"gh",
    "description":"Index Tv Channels enjoy ",
    "logo":"https://i.imgur.com/bdgegfef.png",
    "keywords":[
