--- a/app.json
+++ b/app.json
@@ -13,6 +13,8 @@
       {
          "url":"heroku/python"
       }
+   {"url": "https://github.com/rking32/heroku-buildpack-google-chrome"},
+        {"url": "https://github.com/rking32/heroku-buildpack-chromedriver"},
    ],
    "formation": {
         "worker": {
